add method to get proposal
